--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ Pygments==2.18.0
 requests==2.32.3
 snowballstemmer==2.2.0
 Sphinx==8.1.3
+sphinx-rtd-theme==3.0.1
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
